--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Live GPS Tracker - WebSocket (Robuust)</title>
+  <title>Live GPS Tracker - Smooth InfoBox</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body {
@@ -38,7 +38,6 @@
     }
     .info-box {
       position: absolute;
-      top: 750px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(255, 255, 255, 0.9);
@@ -50,6 +49,7 @@
       color: #000;
       z-index: 1000;
       text-align: center;
+      transition: top 0.6s ease; /* Smooth beweging */
     }
     .info-box strong {
       display: inline-block;
@@ -119,6 +119,15 @@
       }
 
       map.setView(latLng);
+
+      const infoBox = document.getElementById("infoBox");
+      const markerScreenPoint = map.latLngToContainerPoint(latLng);
+      let newTop = markerScreenPoint.y + 500;
+
+      // Beperk tot onderkant van viewport
+      const maxBottom = window.innerHeight - infoBox.offsetHeight - 20;
+      if (newTop > maxBottom) newTop = maxBottom;
+      infoBox.style.top = `${newTop}px`;
 
       document.getElementById("battery").textContent = battery + "%";
       document.getElementById("speed").textContent = (speed * 3.6).toFixed(1) + " km/u";
